src/test/ui/wf/wf-array-elem-sized.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/wf-array-elem-sized.rs:7:5
   |
LL |     foo: [[u8]],
   |     ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: slice and array elements must have `Sized` type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
